--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:tests": "playwright test"
   },
   "dependencies": {
     "@types/node": "20.4.9",
@@ -15,10 +16,14 @@
     "autoprefixer": "10.4.14",
     "next": "13.4.13",
     "next-i18next": "^14.0.0",
+    "playwright": "^1.37.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.37.1"
   }
 }
