--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,9 @@ next-env.d.ts
 /test-results/
 /playwright-report/
 /playwright/.cache/
+/test-results/
+/playwright-report/
+/playwright/.cache/
+/test-results/
+/playwright-report/
+/playwright/.cache/
